--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -180,11 +180,13 @@ jobs:
           --name $DEPSHASH \
           --debug
   build:
-    strategy:
-      fail-fast: true
-      matrix:
-        arch: [macos-13-large, macos-14-xlarge]
-    runs-on: ${{ matrix.arch }}
+    # strategy:
+    #   # fail-fast: true
+    #   matrix:
+    #     arch: [ macos-13-large, macos-14-xlarge ]
+    # runs-on: ${{ matrix.arch }}
+    # runs-on: macos-14-xlarge
+    runs-on: macos-13-large
     needs: checkout
     steps:
     - name: Load Build Tools
@@ -342,6 +344,91 @@ jobs:
         echo 'RBE_service='`node -e "console.log(require('./src/utils/reclient.js').serviceAddress)"` >> $GITHUB_ENV
         echo 'RBE_experimental_credentials_helper='`node -e "console.log(require('./src/utils/reclient.js').helperPath({}))"` >> $GITHUB_ENV
         echo 'RBE_experimental_credentials_helper_args=print' >> $GITHUB_ENV
+    - name: Free Space on MacOS
+      run: |
+        sudo mkdir -p $TMPDIR/del-target
+
+        tmpify() {
+          if [ -d "$1" ]; then
+            sudo mv "$1" $TMPDIR/del-target/$(echo $1|shasum -a 256|head -n1|cut -d " " -f1)
+          fi
+        }
+
+        strip_universal_deep() {
+          opwd=$(pwd)
+          cd $1
+          f=$(find . -perm +111 -type f)
+          for fp in $f
+          do
+            if [[ $(file "$fp") == *"universal binary"* ]]; then
+              if [ "`arch`" == "arm64" ]; then
+                if [[ $(file "$fp") == *"x86_64"* ]]; then
+                  sudo lipo -remove x86_64 "$fp" -o "$fp" || true
+                fi
+              else
+                if [[ $(file "$fp") == *"arm64e)"* ]]; then
+                  sudo lipo -remove arm64e "$fp" -o "$fp" || true
+                fi
+                if [[ $(file "$fp") == *"arm64)"* ]]; then
+                  sudo lipo -remove arm64 "$fp" -o "$fp" || true
+                fi
+              fi
+            fi
+          done
+
+          cd $opwd
+        }
+
+        tmpify /Library/Developer/CoreSimulator
+        tmpify ~/Library/Developer/CoreSimulator
+        tmpify $(xcode-select -p)/Platforms/AppleTVOS.platform
+        tmpify $(xcode-select -p)/Platforms/iPhoneOS.platform
+        tmpify $(xcode-select -p)/Platforms/WatchOS.platform
+        tmpify $(xcode-select -p)/Platforms/WatchSimulator.platform
+        tmpify $(xcode-select -p)/Platforms/AppleTVSimulator.platform
+        tmpify $(xcode-select -p)/Platforms/iPhoneSimulator.platform
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/metal/ios
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift-5.0
+        tmpify ~/.rubies
+        tmpify ~/Library/Caches/Homebrew
+        tmpify /usr/local/Homebrew
+
+        # the contents of build/linux/strip_binary.gni aren't used, but
+        # https://chromium-review.googlesource.com/c/chromium/src/+/4278307
+        # needs the file to exist.
+        # mv ~/project/src/build/linux/strip_binary.gni "${TMPDIR}"/
+        # tmpify ~/project/src/build/linux/
+        # mkdir -p ~/project/src/build/linux
+        # mv "${TMPDIR}/strip_binary.gni" ~/project/src/build/linux/
+
+        sudo rm -rf $TMPDIR/del-target
+
+        # sudo rm -rf "/System/Library/Desktop Pictures"
+        # sudo rm -rf /System/Library/Templates/Data
+        # sudo rm -rf /System/Library/Speech/Voices
+        # sudo rm -rf "/System/Library/Screen Savers"
+        # sudo rm -rf /System/Volumes/Data/Library/Developer/CommandLineTools/SDKs
+        # sudo rm -rf "/System/Volumes/Data/Library/Application Support/Apple/Photos/Print Products"
+        # sudo rm -rf /System/Volumes/Data/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk/
+        # sudo rm -rf /System/Volumes/Data/Library/Java
+        # sudo rm -rf /System/Volumes/Data/Library/Ruby
+        # sudo rm -rf /System/Volumes/Data/Library/Printers
+        # sudo rm -rf /System/iOSSupport
+        # sudo rm -rf /System/Applications/*.app
+        # sudo rm -rf /System/Applications/Utilities/*.app
+        # sudo rm -rf /System/Library/LinguisticData
+        # sudo rm -rf /System/Volumes/Data/private/var/db/dyld/*
+        # sudo rm -rf /System/Library/Fonts/*
+        # sudo rm -rf /System/Library/PreferencePanes
+        # sudo rm -rf /System/Library/AssetsV2/*
+        sudo rm -rf /Applications/Safari.app
+        sudo rm -rf ~/project/src/third_party/catapult/tracing/test_data
+        sudo rm -rf ~/project/src/third_party/angle/third_party/VK-GL-CTS
+
+        # lipo off some huge binaries arm64 versions to save space
+        strip_universal_deep $(xcode-select -p)/../SharedFrameworks
+        # strip_arm_deep /System/Volumes/Data/Library/Developer/CommandLineTools/usr
     - name: Build Electron (darwin)
       run: |
         cd src/electron
@@ -362,11 +449,17 @@ jobs:
     # Additional Targets: shell_browser_ui_unittests third_party/electron_node:headers third_party/electron_node:overlapped-checker electron:hunspell_dictionaries_zip
     - name: Build Electron dist.zip (darwin)
       run: |
+        ARCH=$(uname -m)
+        echo "$ARCH"
+        echo "${{ runner.arch }}"
         cd src
         e build electron:electron_dist_zip -j $NUMBER_OF_NINJA_PROCESSES
         if [ "$CHECK_DIST_MANIFEST" == "1" ]; then
           target_os=mac
           target_cpu=arm64
+          if [ ${{ runner.arch }} == "X64" ]; then
+            target_cpu=x64
+          fi
           electron/script/zip_manifests/check-zip-manifest.py out/Default/dist.zip electron/script/zip_manifests/dist_zip.$target_os.$target_cpu.manifest
         fi
     - name: Build Mksnapshot (darwin)
@@ -428,8 +521,8 @@ jobs:
     - name: Upload Generated Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: generated_artifacts_darwin_${{ matrix.arch }}
-        path: ./generated_artifacts_darwin_${{ matrix.arch }}
+        name: generated_artifacts_darwin_${{ runner.arch }}
+        path: ./generated_artifacts_darwin_${{ runner.arch }}
     - name: Persist Build Artifacts
       uses: actions/cache/save@v4
       with:
@@ -449,7 +542,7 @@ jobs:
           src/third_party/libc++abi
           src/out/Default/obj/buildtools/third_party
           src/v8/tools/builtins-pgo
-        key: ${{ runner.os }}-build-artifacts-darwin-${{ matrix.arch }}-${{ github.sha }}
+        key: ${{ runner.os }}-build-artifacts-darwin-${{ runner.arch }}-${{ github.sha }}
     - name: Create MAS Config
       run: |
         mv src/electron/.github/workflows/config/evm.mas.json $HOME/.electron_build_tools/configs/evm.mas.json
@@ -473,11 +566,18 @@ jobs:
     # Additional Targets: shell_browser_ui_unittests third_party/electron_node:headers third_party/electron_node:overlapped-checker electron:hunspell_dictionaries_zip
     - name: Build Electron dist.zip (mas)
       run: |
+        ARCH=$(uname -m)
+        echo "$ARCH"
+        echo "${{ runner.arch }}"
         cd src
         e build electron:electron_dist_zip -j $NUMBER_OF_NINJA_PROCESSES
         if [ "$CHECK_DIST_MANIFEST" == "1" ]; then
           target_os=mac_mas
           target_cpu=arm64
+          if [ ${{ runner.arch }} == "X64" ]; then
+            echo "Inside the uname condition"
+            target_cpu=x64
+          fi
           electron/script/zip_manifests/check-zip-manifest.py out/Default/dist.zip electron/script/zip_manifests/dist_zip.$target_os.$target_cpu.manifest
         fi
     - name: Build Mksnapshot (mas)
@@ -520,8 +620,8 @@ jobs:
     - name: Upload Generated Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: generated_artifacts_mas_${{ matrix.arch }}
-        path: ./generated_artifacts_mas_${{ matrix.arch }}
+        name: generated_artifacts_mas_${{ runner.arch }}
+        path: ./generated_artifacts_mas_${{ runner.arch }}
     - name: Persist Build Artifacts
       uses: actions/cache/save@v4
       with:
@@ -543,7 +643,7 @@ jobs:
           src/third_party/libc++abi
           src/out/Default/obj/buildtools/third_party
           src/v8/tools/builtins-pgo
-        key: ${{ runner.os }}-build-artifacts-mas-${{ matrix.arch }}-${{ github.sha }}
+        key: ${{ runner.os }}-build-artifacts-mas-${{ runner.arch }}-${{ github.sha }}
   upload:
     runs-on: LargeLinuxRunner
     if: ${{ inputs.IS_RELEASE == true }}
@@ -571,8 +671,8 @@ jobs:
     - name: Download Generated Artifacts
       uses: actions/download-artifact@v4
       with:
-        name: generated_artifacts_darwin_${{ matrix.arch }}
-        path: ./generated_artifacts_darwin_${{ matrix.arch }}
+        name: generated_artifacts_darwin_${{ runner.arch }}
+        path: ./generated_artifacts_darwin_${{ runner.arch }}
     - name: Restore Persisted Build Artifacts
       uses: actions/cache/restore@v4
       with:
@@ -594,7 +694,7 @@ jobs:
           src/third_party/libc++abi
           src/out/Default/obj/buildtools/third_party
           src/v8/tools/builtins-pgo
-        key: ${{ runner.os }}-build-artifacts-darwin-${{ matrix.arch }}-${{ github.sha }}
+        key: ${{ runner.os }}-build-artifacts-darwin-${{ runner.arch }}-${{ github.sha }}
     - name: Restore Generated Artifacts
       run: ./src/electron/script/actions/restore-artifacts.sh
     # TODO(vertedinde): These uploads currently point to a different Azure bucket & GitHub Repo
